# sasha

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  notes.txt
.claude/: settings.local.json
backend/: default.nix  hie.yaml  sasha.cabal
backend/notes/: ONE.txt
backend/src/: Engine.hs  Error.hs  GameState.hs  GameState.hs.old  Lexer.hs  Location.hs  Parser.hs  TopLevel.hs
backend/src/ActionDiscovery/: Administrative.hs  Consume.hs
backend/src/ActionDiscovery/Get/Acquisition/: Get.hs
backend/src/ActionDiscovery/Manipulate/ContainerAccess/: Open.hs
backend/src/ActionDiscovery/Manipulate/SomaticAccess/: Open.hs
backend/src/ActionDiscovery/Movement/Postural/: SitStand.hs
backend/src/ActionDiscovery/Percieve/: Look.hs
backend/src/Actions/: Administrative.hs  Consume.hs
backend/src/Actions/Get/Acquisition/: Get.hs
backend/src/Actions/Manipulate/ContainerAccess/: Open.hs
backend/src/Actions/Manipulate/SomaticAccess/: Open.hs
backend/src/Actions/Movement/Postural/: SitStand.hs  Stand.hs
backend/src/Actions/Percieve/: Look.hs
backend/src/ConstraintRefinement/Actions/: Utils.hs
backend/src/ConstraintRefinement/Actions/Instrument/: Open.hs
backend/src/ConstraintRefinement/Actions/Locations/: Look.hs  Open.hs  Stand.hs
backend/src/ConstraintRefinement/Actions/Objects/: Look.hs  Open.hs  SupportLook.hs
backend/src/ConstraintRefinement/Actions/Objects/Chair/: Look.hs
backend/src/ConstraintRefinement/Actions/Objects/Floor/: Get.hs  Look.hs
backend/src/ConstraintRefinement/Actions/Objects/Get/: Constructors.hs
backend/src/ConstraintRefinement/Actions/Objects/Mail/: Get.hs  Look.hs
backend/src/ConstraintRefinement/Actions/Objects/Pill/: Get.hs  Look.hs  Take.hs
backend/src/ConstraintRefinement/Actions/Objects/Pocket/: Look.hs  Open.hs
backend/src/ConstraintRefinement/Actions/Objects/Robe/: Get.hs  Look.hs
backend/src/ConstraintRefinement/Actions/Objects/Table/: Look.hs
backend/src/ConstraintRefinement/Actions/Player/: Get.hs  Inventory.hs  Look.hs  Open.hs  Stand.hs  Take.hs
backend/src/ConstraintRefinement/Actions/Player/Get/: Constructors.hs
backend/src/ConstraintRefinement/Actions/RoleBased/: Constructors.hs  Conversions.hs
backend/src/ConstraintRefinement/Effects/: NarrationEffects.hs  Utils.hs
backend/src/ConstraintRefinement/Effects/Locations/: Look.hs
backend/src/ConstraintRefinement/Effects/Objects/: SupportLook.hs
backend/src/ConstraintRefinement/Effects/Objects/Chair/: Look.hs
backend/src/ConstraintRefinement/Effects/Objects/Floor/: Get.hs  Look.hs
backend/src/ConstraintRefinement/Effects/Objects/Mail/: Get.hs  Look.hs
backend/src/ConstraintRefinement/Effects/Objects/Pill/: Get.hs  Look.hs  Take.hs
backend/src/ConstraintRefinement/Effects/Objects/Pocket/: Look.hs  Open.hs
backend/src/ConstraintRefinement/Effects/Perception/: Look.hs
backend/src/ConstraintRefinement/Effects/Player/: Get.hs  Inventory.hs  Look.hs  Open.hs  Stand.hs  Take.hs
backend/src/EDSL/: ActionCombinators.hs  GameBuilder.hs  GameStateBuilder.hs
backend/src/EDSL/Actions/: HasAction.hs
backend/src/EDSL/Effects/: EffectAlgebra.hs  HasBehavior.hs  HasEffect.hs  TypeMappings.hs
backend/src/Effects/: EffectAlgebra.hs  HasBehavior.hs  HasEffect.hs  TypeMappings.hs
backend/src/Evaluators/: General.hs
backend/src/Evaluators/Location/: General.hs
backend/src/Evaluators/Player/: General.hs
backend/src/Examples/: Defaults.hs  GameState.hs  Initialize.hs  SashaDemo.hs  SashaDemoClean.hs
backend/src/Examples/BedroomDemo/: GameState.hs
backend/src/GameConstruction/: Defaults.hs  SashaDemo.hs
backend/src/GameState/: ActionManagement.hs  EffectRegistry.hs  FieldEffectRegistry.hs  FieldValidation.hs  Perception.hs  Spatial.hs
backend/src/Grammar/: Lexer.hs  Parser.hs
backend/src/Grammar/Model/: Lexer.hs  Parser.hs
backend/src/Grammar/Parser/: Lexer.hs
backend/src/Grammar/Parser/Partitions/: Adjectives.hs  Adverbs.hs  Misc.hs  Nouns.hs  Prepositions.hs  Verbs.hs
backend/src/Lexer/: Model.hs
backend/src/Model/: Action.hs  Core.hs  GID.hs  GameState.hs  Label.hs  Lexer.hs  Mappings.hs  Parser.hs  Processing.hs
backend/src/Model/Action/: LocationAction.hs
backend/src/Model/Actions/: Results.hs
backend/src/Model/Core/: Mappings.hs
backend/src/Model/EDSL/: SashaDSL.hs  SashaLambdaDSL.hs
backend/src/Model/GameState/: GameStateDSL.hs  Mappings.hs
backend/src/Model/Parser/: GCase.hs  Lexer.hs  Nouns.hs  Prepositions.hs  SpeechParts.hs
backend/src/Model/Parser/Atomics/: Adjectives.hs  Adverbs.hs  Misc.hs  Nouns.hs  Prepositions.hs  Verbs.hs
backend/src/Model/Parser/Composites/: Nouns.hs  Prepositions.hs  Verbs.hs
backend/src/Parser/: NounParsers.hs  NounRules.hs  PhraseParsers.hs  PrepParser.hs  PrepRules.hs  SpeechParts.hs  VerbParsers.hs  VerbRules.hs
backend/src/Parser/Model/: Nouns.hs  Prepositions.hs
backend/src/Parser/Partitions/: Adjectives.hs  Adverbs.hs  Misc.hs  Nouns.hs  Prepositions.hs  Verbs.hs
backend/src/Parser/Rules/: SpeechParts.hs
backend/src/Parser/Rules/Atomics/: Adverbs.hs  Utils.hs  Verbs.hs
backend/src/Parser/Rules/Composites/: Nouns.hs  Prepositions.hs  Verbs.hs
backend/src/Parser/SpeechParts/Atomics/: Adjectives.hs  Adverbs.hs  Misc.hs  Nouns.hs  Prepositions.hs  Verbs.hs
backend/src/Parser/SpeechParts/Composites/: Adjectives.hs  Nouns.hs  Prepositions.hs  Rule.hs  Verbs.hs
backend/src/Sasha/: EffectAlgebra.hs  HasBehavior.hs  HasEffect.hs  TypeMappings.hs
backend/test/: Main.hs  UnitMain.hs
backend/test/Parser/SpeechParts/Atomic/: Verbs.hs
backend/test/Test/: Lexer.hs  TestRunner.hs
backend/test/Test/Arbitrary/: Verbs.hs
backend/test/Test/Categorical/: EffectOwnershipBoundaryLaws.hs  FreeMonadLaws.hs  HierarchyNaturalityLaws.hs  MonadLaws.hs  RegistryAccessNaturality.hs  RegistryNaturalityLaws.hs  SpatialMonoidLaws.hs
backend/test/Test/EndToEnd/: GetRobeFails.hs  LookAtRobeProgression.hs  LookInPocketSequence.hs  OpenEyesTriggerTest.hs  OpenEyesUnlocksGetRobe.hs  OpenPocketSequence.hs
backend/test/Test/Parser/Atomics/: Adverbs.hs  Utils.hs  Verbs.hs
(+79 files in other folders)
