cabal-version: 3.0

name:           sasha
version:        0.1.0.0
synopsis:       a text adventure engine
description:    Please see the README on GitHub at <https://gitlab.horizon-haskell.net/haskell/template>
category:       Web
author:         Michael Litchard
maintainer:     <email here>
copyright:      Michael Litchard
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://gitlab.horizon-haskell.net/haskell/template

common shared
  default-language:   GHC2021
  default-extensions:
    ApplicativeDo
    RecursiveDo
    BlockArguments
    CPP
    DerivingVia
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    QuantifiedConstraints
    RecordWildCards
    RoleAnnotations
    TemplateHaskell

common tests
  cpp-options: -DTESTING
  ghc-options:
    -Wall -Wcompat -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns -fwarn-tabs
    -fwarn-incomplete-record-updates -fwarn-identities -threaded
    -fno-warn-missing-home-modules -rtsopts -freduction-depth=1000

library
  import: shared
  exposed-modules:
      Actions.Manipulate.SomaticAccess.Open
      Actions.Percieve.Look
      Build.BedPuzzle.Actions.Look
      Build.BedPuzzle.Actions.Open
      Build.BedPuzzle.Actions.Objects.Pill
      Build.BedPuzzle.Actions.Objects.Pill.Look
      Build.BedPuzzle.Actions.Objects.Chair
      Build.BedPuzzle.Actions.Objects.Chair.Look
      Build.BedPuzzle.Actions.Objects.Table
      Build.BedPuzzle.Actions.Objects.Table.Look
      Build.BedPuzzle.BedRoom
      Build.GameState
      Build.Identifiers.Actions
      Build.Identifiers.Locations
      Build.Identifiers.Objects
      Build.Identifiers.SentenceProcessing
      Build.Templates.Identification
      Build.Templates.Sentence
      Build.World
      Error
      Evaluators.Player.General
      Location
      Model.Action.LocationAction
      Model.GameState
      Model.GID
      Model.Label
      Model.Mappings
      Model.Parser
      Model.Parser.Atomics.Adjectives
      Model.Parser.Atomics.Adverbs
      Model.Parser.Atomics.Nouns
      Model.Parser.Atomics.Misc
      Model.Parser.Atomics.Prepositions
      Model.Parser.Atomics.Verbs
      Model.Parser.Composites.Nouns
      Model.Parser.Composites.Verbs
      Model.Parser.GCase
      Model.Parser.Lexer
      GameState
      Grammar.Parser
      Grammar.Parser.Lexer
      Grammar.Parser.Partitions.Adjectives
      Grammar.Parser.Partitions.Adverbs
      Grammar.Parser.Partitions.Misc
      Grammar.Parser.Partitions.Nouns.Containers
      Grammar.Parser.Partitions.Nouns.DirectionalStimulus
      Grammar.Parser.Partitions.Nouns.Edibles
      Grammar.Parser.Partitions.Nouns.Objectives
      Grammar.Parser.Partitions.Nouns.SomaticStimulus
      Grammar.Parser.Partitions.Nouns.Supportives
      Grammar.Parser.Partitions.Nouns.Utils
      Grammar.Parser.Partitions.Prepositions
      Grammar.Parser.Partitions.Verbs.CardinalMovementVerbs
      Grammar.Parser.Partitions.Verbs.DirectionalStimulusVerb
      Grammar.Parser.Partitions.Verbs.EdibleConsumptionVerbs
      Grammar.Parser.Partitions.Verbs.ImplicitBoundaryVerb
      Grammar.Parser.Partitions.Verbs.ImplicitRegionalStimulusVerb
      Grammar.Parser.Partitions.Verbs.ImplicitStimulusVerb
      Grammar.Parser.Partitions.Verbs.InstrumentActionVerbs
      Grammar.Parser.Partitions.Verbs.SimpleAccessVerbs
      Grammar.Parser.Partitions.Verbs.SomaticAccessVerbs
      Grammar.Parser.Partitions.Templates.Atomics
      Grammar.Parser.Rules.Atomics.Adverbs
      Grammar.Parser.Rules.Atomics.Nouns
      Grammar.Parser.Rules.Atomics.Prepositions
      Grammar.Parser.Rules.Atomics.Verbs
      Grammar.Parser.Rules.Atomics.Utils
      Grammar.Parser.Rules.Composites.Nouns
      Grammar.Parser.Rules.Composites.Verbs
      TopLevel
  hs-source-dirs:
      src

  ghc-options: -Weverything -Wno-all-missed-specialisations
               -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
               -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe
               -Wno-missed-specialisations
  build-depends:
     base >=4.7 && <5
   , Earley
   , hashable
   , haskeline
   , megaparsec
   , mmorph
   , mtl
   , relude
   , template-haskell
   , unordered-containers
  default-language: GHC2021

library sasha-testing
  import:         shared, tests
  hs-source-dirs: test
  build-depends:
    , aeson
    , base
    , Earley
    , generic-arbitrary
    , hashable
    , hspec
    , megaparsec
    , mtl
    , QuickCheck
    , quickcheck-instances
    , relude
    , safe
    , template-haskell
    , text
    , sasha
 exposed-modules:
      Test.Arbitrary.Verbs
      Test.Lexer
      Test.Parser.Atomics.Adverbs
      Test.Parser.Atomics.Utils
      Test.Parser.Atomics.Verbs
 default-language: GHC2021

executable sasha-tests
  import:         shared, tests
  main-is:        Main.hs
  hs-source-dirs: test src
  build-depends:
     base
     , Earley
     , hashable
     , hspec
     , megaparsec
     , QuickCheck
     , relude
     , template-haskell
     , text
     , sasha-testing
