cabal-version: 3.0

name:           sasha
version:        0.1.0.0
synopsis:       a text adventure engine
description:    Please see the README on GitHub at <https://gitlab.horizon-haskell.net/haskell/template>
category:       Web
author:         Michael Litchard
maintainer:     <email here>
copyright:      Michael Litchard
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://gitlab.horizon-haskell.net/haskell/template

common shared
  default-language:   GHC2021
  default-extensions:
    ApplicativeDo
    RecursiveDo
    BlockArguments
    CPP
    DerivingVia
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    QuantifiedConstraints
    RecordWildCards
    RoleAnnotations
    TemplateHaskell

common tests
  cpp-options: -DTESTING
  ghc-options:
    -Wall -Wcompat -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns -fwarn-tabs
    -fwarn-incomplete-record-updates -fwarn-identities -threaded
    -fno-warn-missing-home-modules -rtsopts -freduction-depth=1000

library
  import: shared
  exposed-modules:
      ActionDiscovery.Administrative
      ActionDiscovery.Consume
      ActionDiscovery.Get.Acquisition.Get
      ActionDiscovery.Manipulate.ContainerAccess.Open
      ActionDiscovery.Manipulate.SomaticAccess.Open
      ActionDiscovery.Movement.Postural.SitStand
      ActionDiscovery.Percieve.Look
      ConstraintRefinement.Actions.Player.Inventory
      ConstraintRefinement.Actions.Utils
      ConstraintRefinement.Actions.Locations.Look
      ConstraintRefinement.Actions.Player.Get
      ConstraintRefinement.Actions.Player.Look
      ConstraintRefinement.Actions.Player.Open
      ConstraintRefinement.Actions.Player.Stand
      ConstraintRefinement.Actions.Player.Take
      ConstraintRefinement.Actions.Objects.Get.Constructors
      ConstraintRefinement.Actions.Objects.Open
      ConstraintRefinement.Actions.Objects.SupportLook
      ConstraintRefinement.Actions.Objects.Chair.Look
      ConstraintRefinement.Actions.Objects.Floor.Look
      ConstraintRefinement.Actions.Objects.Floor.Get
      ConstraintRefinement.Actions.Objects.Mail.Get
      ConstraintRefinement.Actions.Objects.Mail.Look
      ConstraintRefinement.Actions.Objects.Pill.Get
      ConstraintRefinement.Actions.Objects.Pill.Look
      ConstraintRefinement.Actions.Objects.Pill.Take
      ConstraintRefinement.Actions.Objects.Pocket.Look
      ConstraintRefinement.Actions.Objects.Pocket.Open
      ConstraintRefinement.Actions.Objects.Robe.Get
      ConstraintRefinement.Actions.Objects.Robe.Look
      ConstraintRefinement.Actions.Objects.Table.Look
      ConstraintRefinement.Effects.Perception.Look
      EDSL.GameBuilder
      EDSL.ActionCombinators
      Error
      Evaluators.Player.General
      Examples.Defaults
      Examples.Initialize
      Examples.SashaDemo
      GameState
      GameState.ActionManagement
      GameState.Perception
      GameState.EffectRegistry
      GameState.FieldValidation
      GameState.Spatial
      Grammar.Parser
      Grammar.Parser.Lexer
      Grammar.Parser.Partitions.Adjectives
      Grammar.Parser.Partitions.Adverbs.ImplicitPaths
      Grammar.Parser.Partitions.Adverbs.PosturalDirections
      Grammar.Parser.Partitions.Misc
      Grammar.Parser.Partitions.Nouns.Containers
      Grammar.Parser.Partitions.Nouns.DirectionalStimulus
      Grammar.Parser.Partitions.Nouns.Consumables
      Grammar.Parser.Partitions.Nouns.Objectives
      Grammar.Parser.Partitions.Nouns.SomaticStimulus
      Grammar.Parser.Partitions.Nouns.Instruments
      Grammar.Parser.Partitions.Nouns.Surfaces
      Grammar.Parser.Partitions.Nouns.Utils
      Grammar.Parser.Partitions.Prepositions.ContainmentMarkers
      Grammar.Parser.Partitions.Prepositions.DirectionalStimulusMarker
      Grammar.Parser.Partitions.Prepositions.InstrumentMarkers
      Grammar.Parser.Partitions.Prepositions.SourceMarkers
      Grammar.Parser.Partitions.Prepositions.SurfaceMarkers
      Grammar.Parser.Partitions.Verbs.AcquisitionVerbs
      Grammar.Parser.Partitions.Verbs.AdministrativeVerbs
      Grammar.Parser.Partitions.Verbs.CardinalMovementVerbs
      Grammar.Parser.Partitions.Verbs.DirectionalStimulusVerb
      Grammar.Parser.Partitions.Verbs.ConsumptionVerbs
      Grammar.Parser.Partitions.Verbs.ImplicitBoundaryVerb
      Grammar.Parser.Partitions.Verbs.ImplicitRegionalStimulusVerb
      Grammar.Parser.Partitions.Verbs.ImplicitStimulusVerb
      Grammar.Parser.Partitions.Verbs.InstrumentActionVerbs
      Grammar.Parser.Partitions.Verbs.PosturalVerbs
      Grammar.Parser.Partitions.Verbs.SimpleAccessVerbs
      Grammar.Parser.Partitions.Verbs.SomaticAccessVerbs
      Grammar.Parser.Partitions.Templates.Atomics
      Grammar.Parser.Rules.Atomics.Adverbs
      Grammar.Parser.Rules.Atomics.Nouns
      Grammar.Parser.Rules.Atomics.Prepositions
      Grammar.Parser.Rules.Atomics.Verbs
      Grammar.Parser.Rules.Atomics.Utils
      Grammar.Parser.Rules.Composites.Nouns
      Grammar.Parser.Rules.Composites.Verbs
      Model.Actions.Results
      Model.Core
      Model.Core.Mappings
      Model.EDSL.SashaLambdaDSL
      Model.GID
      Model.Label
      Model.Parser
      Model.Parser.Atomics.Adjectives
      Model.Parser.Atomics.Adverbs
      Model.Parser.Atomics.Nouns
      Model.Parser.Atomics.Misc
      Model.Parser.Atomics.Prepositions
      Model.Parser.Atomics.Verbs
      Model.Parser.Composites.Nouns
      Model.Parser.Composites.Verbs
      Model.Parser.GCase
      Model.Parser.Lexer
      Sasha.EffectAlgebra
      Sasha.HasBehavior
      Sasha.HasEffect
      Sasha.TypeMappings
      TopLevel
  hs-source-dirs:
      src

  ghc-options: -Weverything -Wno-all-missed-specialisations
               -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
               -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe
               -Wno-missed-specialisations
  build-depends:
     base >=4.7 && <5
   , Earley
   , hashable
   , haskeline
   , megaparsec
   , mmorph
   , mtl
   , relude
   , template-haskell
   , unordered-containers
  default-language: GHC2021

library sasha-testing
  import:         shared, tests
  hs-source-dirs: src, test
  build-depends:
    , aeson
    , base
    , Earley
    , generic-arbitrary
    , hashable
    , haskeline
    , hspec
    , megaparsec
    , mmorph
    , mtl
    , QuickCheck
    , quickcheck-instances
    , relude
    , safe
    , template-haskell
    , text
 exposed-modules:
      Test.Arbitrary.Verbs
      Test.EndToEnd.GetRobeFails
      Test.EndToEnd.OpenEyesTriggerTest
      Test.EndToEnd.OpenEyesUnlocksGetRobe
      Test.Lexer
      Test.Parser.Atomics.Adverbs
      Test.Parser.Atomics.Utils
      Test.Parser.Atomics.Verbs
      Test.TestRunner
      TopLevel
      Examples.Initialize
      GameState
      GameState.ActionManagement
      GameState.EffectRegistry
      GameState.Spatial
      Model.Core.Mappings
      Model.GID
      -- Grammar modules with Arbitrary instances
      Grammar.Parser.Partitions.Adjectives
      Grammar.Parser.Partitions.Adverbs.ImplicitPaths
      Grammar.Parser.Partitions.Adverbs.PosturalDirections
      Grammar.Parser.Partitions.Misc
      Grammar.Parser.Partitions.Nouns.Consumables
      Grammar.Parser.Partitions.Nouns.Containers
      Grammar.Parser.Partitions.Nouns.DirectionalStimulus
      Grammar.Parser.Partitions.Nouns.Instruments
      Grammar.Parser.Partitions.Nouns.Objectives
      Grammar.Parser.Partitions.Nouns.SomaticStimulus
      Grammar.Parser.Partitions.Nouns.Surfaces
      Grammar.Parser.Partitions.Verbs.AcquisitionVerbs
      Grammar.Parser.Partitions.Verbs.AdministrativeVerbs
      Grammar.Parser.Partitions.Verbs.CardinalMovementVerbs
      Grammar.Parser.Partitions.Verbs.ConsumptionVerbs
      Grammar.Parser.Partitions.Verbs.DirectionalStimulusVerb
      Grammar.Parser.Partitions.Verbs.ImplicitBoundaryVerb
      Grammar.Parser.Partitions.Verbs.ImplicitRegionalStimulusVerb
      Grammar.Parser.Partitions.Verbs.InstrumentActionVerbs
      Grammar.Parser.Partitions.Verbs.PosturalVerbs
      Grammar.Parser.Partitions.Verbs.SimpleAccessVerbs
      Grammar.Parser.Partitions.Verbs.SomaticAccessVerbs
      -- Core modules with Arbitrary instances
      Model.Core
      Model.Parser.Composites.Nouns
 default-language: GHC2021

executable sasha-tests
  import:         shared, tests
  main-is:        Main.hs
  hs-source-dirs: test src
  build-depends:
     base
     , Earley
     , hashable
     , haskeline
     , hspec
     , megaparsec
     , mmorph
     , mtl
     , QuickCheck
     , relude
     , template-haskell
     , text
